# MainApp

./: README.md  build.gradle  common.gradle  config.gradle  gradle.properties  settings.gradle
Utils/: build.gradle
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: kot  shape  test  test2
app/src/main/cpp/: CpuFeatures.cpp
app/src/main/res/drawable/: item_pressed_bg.xml
app/src/main/res/layout/: activity_main.xml  rv_item_plugin.xml
app/src/main/res/values/: colors.xml
app/src/main/res/xml/: plugin.xml
buildSrc/: build.gradle
kot/: build.gradle
kot/src/main/: AndroidManifest.xml
kot/src/main/res/layout/: activity_main.xml  activity_sec.xml
kot/src/main/res/values/: attrs.xml  strings.xml
plugin/: build.gradle
shape/: build.gradle
shape/src/main/: AndroidManifest.xml
shape/src/main/res/drawable/: bg_round_corner.xml
shape/src/main/res/layout/: activity_main.xml
test/: CMakeLists.txt  build.gradle
test/src/main/: AndroidManifest.xml
test/src/main/assets/: test.xml
test/src/main/cpp/: Logger.cpp  Logger.h
test/src/main/java/com/jch/test/: FourthActivity.java  HelloFragment.java  Logger.java  MainActivity.java  MainApplication.java  SecandActivity.java  TestButton.java  ThirdActivity.java
test/src/main/res/drawable/: text_seleor_bg.xml
test/src/main/res/layout/: act_fourth.xml  act_secand.xml  act_thr.xml  activity_main.xml  fmt_fourth.xml
test/src/main/res/values/: attrs.xml  colors.xml  strings.xml
test2/: build.gradle
test2/src/main/: AndroidManifest.xml
(+84 files in other folders)
